tests/lean/doLetLoop.lean.expected.out
doLetLoop.lean:4:0: error: unexpected end of input
doLetLoop.lean:2:4-2:5: warning: declaration uses 'sorry'
