tests/lean/doLetLoop.lean
set_option showPartialSyntaxErrors true
def f : IO Unit := do
  if let
